# DocuBotAI

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  task-definition.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  deployment.md  installation.md  quickstart.md
examples/: advanced_usage.py  quickstart.py
examples/integration/: example_integration.py
frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Documents.tsx  HowToUse.tsx  Settings.tsx
frontend/src/components/ui/: card.tsx  switch.tsx  toast.tsx  use-toast.ts
migrations/: env.py
migrations/versions/: 20240315_000000_initial.py
src/docubotai/: .env.example  __init__.py
src/docubotai/api/: main.py
src/docubotai/api/routes/: admin.py  query.py  scraping.py  tools.py
src/docubotai/cli/: main.py
src/docubotai/core/: celery.py  database.py
src/docubotai/models/: database.py
src/docubotai/rag/: system.py
src/docubotai/scrapers/: apify.py  base.py
src/docubotai/tasks/: processing.py  scraping.py
src/docubotai/utils/: rate_limit.py  text.py
tests/: conftest.py  test_api.py
tests/fixtures/: sample_docs.json
