[tool.poetry]
name = "docubot"
version = "0.1.0"
description = "Documentation agent that auto-scrapes toolstacks and creates a RAG system"
authors = ["Yael <yael@docubot.ai>"]
readme = "README.md"
packages = [{include = "docubot"}]

[tool.poetry.dependencies]
python = "^3.9"
apify-client = "^1.0.0"
anthropic = "^0.8.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
celery = "^5.3.0"
redis = "^5.0.0"
langchain = "^0.1.0"
chromadb = "^0.4.0"
beautifulsoup4 = "^4.12.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
docubot = "docubot.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py39"